--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
     <!-- font-awesome icons -->
     <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <!-- //Custom Theme files -->
-    <!-- online-fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet">
-    <!-- //online-fonts -->
 </head>
 <body>
     <div class="sidenav">
 		<div class="side_top">
 			<img src="images/t2.png" alt="news image" class="img-fluid navimg">
-			<h1> Eu ac iaculis ac nunc nisi lorem <br>vulputate lorem neque cubilia ac in <br>adipiscing in curae</h1>
+			<h1> yuqi.zhao <br>welcome <br>hello world</h1>
 		</div>
 		<!-- header -->
 		<header>
@@ -299,7 +296,7 @@
 							</li>
 							<li>
 								<span class="fa fa-envelope"></span>
-								<a href="mailto:name@example.com"> mail@example.com</a>
+								<a href="yuqi.zhao@uuabc.com"> yuqi.zhao@uuabc.com</a>
 							</li>
 							<li>
 								<span class="fa fa-phone"></span> +143 367 436 2049 </li>
@@ -307,7 +304,7 @@
 								<span class="fa fa-fax"></span> +166 367 808 5055 </li>
 							<li>
 								<span class="fa fa-globe"></span>
-								<a href="#"> www.websitename.com</a>
+								<a href="#"> classroom.uuuabc.com</a>
 							</li>
 					</ul>
 				</div>
